--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,12 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1560.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
-    "mongoose": "^6.2.1"
+    "mongoose": "^6.12.6"
   },
   "devDependencies": {
     "morgan": "^1.10.0"
